Jenkinsfile updated